--- a/persistentVolumeClaim.yml
+++ b/persistentVolumeClaim.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: local-pvc
+  namespace: nginx # I put my created namespace name "nginx". You just find your namespace name and put it there. 
 spec:
   accessModes:
     - ReadWriteOnce
